# doc-vecs-reading

./: metrix-doc-vecs-reading.cabal  stack.yaml
samples/: 1.tsv
test-sample-1/: Main.hs
