name:
  metrix-doc-vecs-reading
version:
  0.1
build-type:
  Simple
cabal-version:
  >=1.24

library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DuplicateRecordFields, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, Strict, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  exposed-modules:
    Metrix.DocVecsReading.IO
  other-modules:
    Metrix.DocVecsReading.Attoparsec
    Metrix.DocVecsReading.Prelude
  build-depends:
    attoparsec,
    bug,
    foldl,
    metrix-clickstream-data,
    metrix-nlp-data,
    potoki,
    rerebase
